--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,21 +1,22 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+owner: conexusdev01 # Your GitHub organization or username, where this repository lives
+repo: status # The name of this repository
 
 sites:
   - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
+    url: https://www.example.com
   - name: Test Broken Site
     url: https://thissitedoesnotexist.koj.co
-  - name: IPv6 test
-    url: forwardemail.net
-    port: 80
-    check: "tcp-ping"
-    ipv6: true
+  # - name: IPv6 test
+  #   url: forwardemail.net
+  #   port: 80
+  #   check: "tcp-ping"
+  #   ipv6: true
+  - name: Api Demo Conexus
+    url: https://demo.conexusit.com/ServicioWebREST/Service.svc/Status
+    check:  {
+              "StatusResult": "Ok"
+            }
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
@@ -23,14 +24,12 @@ status-website:
   cname: demo.upptime.js.org
   # baseUrl: /your-repo-name
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  name: Conexus Status
+  introTitle: "Sitio Web del status de los servicios vitales para el funcionamiento de **ConexusIT**"
+  introMessage: Servicios analizados...DIAN Pruebas, DIAN Produccion, Conexus API Demo, Conexus API Producción, Express Demo, Express Producción, Corporativo Demo, Corporativo Prod.
   navbar:
     - title: Status
       href: /
-    - title: GitHub
-      href: https://github.com/$OWNER/$REPO
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
